--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 /Lab03MPL/nbproject/private/
 /Lab03MPL/build/
+/Lab04Circle/nbproject/private/
+/Lab04Circle/build/
+/Circle_Drawing/nbproject/private/
+/Circle_Drawing/build/
+/Lab04Circle/dist/
+/Lab04CircleEightWay/nbproject/private/
+/Lab04CircleEightWay/build/
+/Lab04CircleEightWay/dist/
